<resources>
    <string name="app_name">eRaLIS</string>
    <string name="rsta">©Road Safety and Transport Authority</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="eralis_logo">eRaLIS logo</string>
    <string name="title_activity_home_screen">Options</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="DL_Details">Driving Licence Details</string>
    <string name="v_Details">Vehicle Details</string>
    <string name="voff_Details">View Offences</string>
    <string name="noff_Details">New Offences</string>
    <string name="eralis_web">https://eralis.rsta.gov.bt/eralis/</string>
    <string name="DL_No">Driving Licence Number</string>
    <string name="DL_view">VIEW</string>


    <string name="ll">Driving Licence Number</string>
</resources>
